--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/projectmanager
+MONGODB_URI=mongodb://localhost:27017/AH2023
 JWT_SECRET=0123456789
-PORT=5000 
+PORT=3333 
