--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.2",
+    "multer": "^1.4.5-lts.1",
     "styled-components": "^6.1.13",
     "yup": "^1.4.0"
   },
