--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "joi": "^17.13.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-toastify": "^10.0.6"
+  },
+  "devDependencies": {
+    "vite": "^6.0.3"
   }
 }
